swen430as1/tests/invalid/foreach/ForEach_Invalid_01.while
int f(int[] items) {
    int x = 0;
    for(int item = 1 : items) {
	x = x + item;
    }
    return x;
}
